--- a/tex/05_share.tex
+++ b/tex/05_share.tex
@@ -27,7 +27,7 @@
 在机票的乘客预测模型中，我们使用了作者主题模型（ATM）来分析乘客的行为模型。主题模型是一种生成模型，其主要观点是一篇文档可以抽取出混合的多个主题。作者主题模型在原主题的基础上又添加了作者的关系。每个账户独立进行模型训练，可以将每个账户看作一个语料库。账户中出现过的所有乘客看作每位作者，每条机票订单看作一篇文档， 机票中的每个特征以及上下文信息看作预定义的词库。如果出现一张机票有多个乘客的情况，我们将他们视为共同作者。
 
 \section{乘客预测模型}
-事实上，主题模型在推荐系统中的应用很广泛。例如，在pLSA模型中，每个物品可以视作一个词汇，主题服从对物品的多项式分布，每个主题代表了一种隐性特征。每用户的偏好模型都服从对主题的多项式分布。用户的每次购买行为都可以被看作从该用户中抽样一个主题$Z$，再从该主题中抽取一个词汇的过程。由于机票具有动态属性，很难将不同价格的机票定义为同一个物品；并且每类机票的数量受限于飞机的型号，因此上述pLSA模型很难用到机票推荐领域中。
+事实上，主题模型在推荐系统中的应用很广泛。例如，在PLSA模型中，每个物品可以视作一个词汇，主题服从对物品的多项式分布，每个主题代表了一种隐性特征。每用户的偏好模型都服从对主题的多项式分布。用户的每次购买行为都可以被看作从该用户中抽样一个主题$Z$，再从该主题中抽取一个词汇的过程。由于机票具有动态属性，很难将不同价格的机票定义为同一个物品；并且每类机票的数量受限于飞机的型号，因此上述pLSA模型很难用到机票推荐领域中。
 
 \subsection{模型描述及表示}
 
