--- a/tex/07_summary.tex
+++ b/tex/07_summary.tex
@@ -4,5 +4,22 @@
 \label{chap:summary}
 
 \section{本文工作总结}
+本文中的几个工作体现在一些几个方面。
+
+1.提出基于特征分布模型的机票推荐算法。通过对原始机票订单的分析，结合业务经验知识，我们提取了影响用户购买决策的机票特征并进行离散化。通过历史订单统计用户在各特征上的选择分布，分析用户对每个特征的偏好。同时，使用信息学中的熵值理论衡量每位用户对机票特征的集中程度，提出了特征权重计算方法。结合机票订购的实际应用场景，将推荐算法分解为离线构建模型和在线计算评分两个步骤，使算法达到了在生产环境部署上线的条件。该算法在后续章节中作为基线算法，用于检测在细化推荐场景后，推荐效果是否有提升。
+
+2.提出解决机票推荐冷启动问题的方法。分析了不同航线上的特征分布以及用户行为分布的差异，并结合数据实验验证了航线间差异对机票推荐准确率的影响。提出了机票推荐场景中的冷启动问题。根据用户历史订单数量，将问题分为航线冷启动问题以及用户冷启动问题。对于第一个问题，我们提出了基于特征分布和用户行为分布的添加激励因子的航线相似度度量方法，为用户选取最优相似航线并构建修正混合模型。对于在所有航线都属于冷启动的用户。通过挖掘用户和乘客之间多样的对应关系，依据共同乘客以及共同出行建立了用户间的社会关系，提出了增强用户模型。
+
+3.提出结合共享账户乘客预测的机票推荐算法。分析了机票选购场景中的共享账户问题，基于乘客间存在偏好差异的事实，提出了基于乘客预测的推荐构想。使用作者-主题模型对乘客的行为模型进行建模，将每个账户下的所有历史订单视为语料库；将每条订单视为文档；将机票特征内容及购票上下文视为词库，将订单的乘客视为文档的作者。使用Gibbs采样的方法对模型进行训练，并结合进行机票推荐时的上下文信息进行乘客预测。最后将乘客预测与机票推荐结合起来，为用户提供更有针对性的推荐。
+
+4.提出结合隐性特征的机票推荐算法。通过对比不同起飞日期的机票推荐准确率，证明了用户的偏好并非一成不变，而是在某些起飞日期可能会产生行为变化。而基于特征分布的用户偏好模型无法反映这一特点。我们为用户模型和机票内容添加了起飞日期这一特征，并划分为工作日、周末、节假日三个维度。使用转换矩阵将用户在显性空间上的偏好以及机票在显性空间的内容都映射到隐性空间。使用梯度下降算法推导模型参数，得到基于隐性特征的用户偏好，与用户的显性特征偏好相结合，提升机票推荐准确率。
 
 \section{未来工作展望}
+
+本文对结合用户偏好的机票推荐问题进行了研究。使用用户的历史数据构建给予特征分布的用户偏好模型。并对机票推荐中的一些场景和问题进行细化一研究，进一步提升了推荐准确率。由于时间精力有限，仍有部分问题需要改进与提高，未来的研究方向可以就以下几点展开：
+
+1.深入挖掘机票特征及特征间联系。
+
+2.机票周边产品组合推荐
+
+3.机票中转推荐
