--- a/tex/00_abstract.tex
+++ b/tex/00_abstract.tex
@@ -5,8 +5,25 @@
 
 \begin{abstract}
 
-\keywords{\large 上海交大 \quad 饮水思源 \quad 爱国荣校}
+随着在线旅游业的发展，在线机票订购业务为用户提供在线选购机票的服务支持。虽然其丰富了用户的选择，但对于一些热门航线，搜索结果中的候选机票的数量过多。增加了用户的选择成本，降低了交互效率。如果能够根据每位用户的偏好，为用户从候选机票中推荐满足用户偏好的机票，可以更有效地克服机票购买中信息过载问题。
+
+论文主要研究了用户偏好建模及机票推荐。结合机票价格动态变化的特征并根据机票选购的实际业务场景，提出了基于内容的方法为用户提供个性化机票推荐。其后，论文分析了机票推荐中仍存在的一些问题，并细化了推荐场景，进一步提升机票推荐的准确率。文章的主要工作体现在以下几个方面：
+
+1.提出基于用户特征分布的机票推荐算法。对数据集进行研究与分析，提取影响用户购买决策的机票特征。根据用户的历史订单构建用户特征分布模型；提出了模拟机票实时推荐场景。本条工作作为深入研究的基础，贯穿所有后续章节。
+
+2.提出解决机票推荐冷启动问题的方法。分析航线特征分布差异对机票推荐准确率的影响，提出机票推荐冷启动问题。总体分为航线冷启动和用户冷启动两种类型。对于前者，根据航线特征分布和用户行为衡量航线间相似度，为用户构建修正混合模型；对于后者，结合共同乘客和同乘关系组成用户间的社会关系，提出增强用户模型的算法。
+
+3.提出结合共享账户乘客预测的机票推荐算法。根据同一账户下乘客的偏好差异，提出了机票推荐中共享账户问题。使用作者-主题模型对乘客的概率分布进行预测。并结合当前会话的上下文信息计算乘客概率分布，将乘客预测结果结合到机票推荐过程中，提供更具针对性的推荐。
+
+4.提出结合隐性特征的机票推荐算法。通过分析不同起飞日期的机票推荐准确率，验证了用户行为变化的事实。建立了转换矩阵将用户模型和机票内容映射到隐性空间。通过参数估计得到用户在隐性空间的偏好模型。综合了用户显性偏好模型和隐性偏好模型，得到最终机票推荐结果。
+
+\textbf{关键词：} 机票推荐，冷启动，主题模型，共享账户，隐性特征
 \end{abstract}
+
+
+
+
+
 
 \begin{englishabstract}
 
