--- a/tex/01_intro.tex
+++ b/tex/01_intro.tex
@@ -64,7 +64,7 @@
 
 2.提出解决机票推荐冷启动问题的方法
 
-分析了航线分布的差异及其对机票推荐准确率的影响，提出机票推荐场景中的冷启动问题。针对航线冷启动和用户冷启动两种情况进行分析。对于前者，根据航线特征分布和用户行为集中程度衡量航线间相似度，为用户构建修正混合模型；对于后者，根据用户与乘客的多种对应关系，结合共同乘客和同乘选系组成用户间的社会关系，提出增强用户模型的算法。
+分析了航线分布的差异及其对机票推荐准确率的影响，提出机票推荐场景中的冷启动问题。针对航线冷启动和用户冷启动两种情况进行分析。对于前者，根据航线特征分布和用户行为集中程度衡量航线间相似度，为用户构建修正混合模型；对于后者，根据用户与乘客的多种对应关系，结合共同乘客和同乘关系组成用户间的社会关系，提出增强用户模型的算法。
 
 
 3.提出结合共享账户乘客预测的机票推荐算法
