--- a/tex/03_baseline.tex
+++ b/tex/03_baseline.tex
@@ -72,7 +72,7 @@ $P_{cur}$是当前机票的价格，在每条订单记录中可以获取。$P_{l
 
 \subsection{机票特征权重的计算}
 
-特征的权重代表了该特征对用户的重要程度。通常，在用户更侧重的特征上，用户的偏好会更加集中。我们使用熵todo:cite来描述用户特征分布的集中程度。熵的公式如下：
+特征的权重代表了该特征对用户的重要程度。通常，在用户更侧重的特征上，用户的偏好会更加集中。我们使用熵值来描述用户特征分布的集中程度。熵的公式如下：
 \begin{equation}
 \label{eq:entropy}
 	S(\mathbf{X}) = E[-\ln (P(\mathbf{X}))] = - \sum_{i=1}^n P(x_i)\ln P(X_i)
