--- a/tex/07_summary.tex
+++ b/tex/07_summary.tex
@@ -4,7 +4,7 @@
 \label{chap:summary}
 
 \section{本文工作总结}
-本文中的几个工作体现在一些几个方面。
+本文中的几个工作体现在以下几个方面。
 
 1.提出基于特征分布模型的机票推荐算法。通过对原始机票订单的分析，结合业务经验知识，我们提取了影响用户购买决策的机票特征并进行离散化。通过历史订单统计用户在各特征上的选择分布，分析用户对每个特征的偏好。同时，使用信息学中的熵值理论衡量每位用户对机票特征的集中程度，提出了特征权重计算方法。结合机票订购的实际应用场景，将推荐算法分解为离线构建模型和在线计算评分两个步骤，使算法达到了在生产环境部署上线的条件。该算法在后续章节中作为基线算法，用于检测在细化推荐场景后，推荐效果是否有提升。
 
@@ -18,8 +18,10 @@
 
 本文对结合用户偏好的机票推荐问题进行了研究。使用用户的历史数据构建给予特征分布的用户偏好模型。并对机票推荐中的一些场景和问题进行细化一研究，进一步提升了推荐准确率。由于时间精力有限，仍有部分问题需要改进与提高，未来的研究方向可以就以下几点展开：
 
-1.深入挖掘机票特征及特征间联系。
+1.深入挖掘机票特征。当前我们的模型都是建立在诸如机票的内容特征上。这些特征只能反映用户决策的结果，却不能全面体现出用户的决策过程。在未来的研究中，我们可以从用户的行为中挖掘更多的特征。可以利用的数据包括用户的搜索、点击、筛选行为记录，用户登录的时间、地理位置等信息。结合用户行为和机票内容的模型可能会提供准确率更高的推荐。
 
-2.机票周边产品组合推荐
+2.挖掘机票特征间的相关性。当前我们对于机票的每个特征都是独立建模的，没有考虑特征之间的关联性。例如舱位和价格、航司和退改签政策之间是具有相关性的。在未来的研究中，我们可以使用特征提取的方法更多地研究特征之间的相关性，提升模型的准确率。
 
-3.机票中转推荐
+3.机票附加产品组合推荐。用户在选定机票之后，往往会选定一些机票附加产品，例如机票延误险、接送机专车、候机休息室等。未来我们会研究机票附加产品的推荐，与机票推荐方法结合，促进提升机票推荐的效果。
+
+4.机票中转推荐。目前我们所做的研究都是基于直达航班的推荐。然而对于部分航程，可能存在中转航班、航班-高铁组合的情况。这类问题会产生更严重的信息超载现象，很具有挑战性。在国际航线和一些国内特定航线也具有研究意义。
