--- a/bib/thesis.bib
+++ b/bib/thesis.bib
@@ -1,277 +1,485 @@
-%# -*- coding: utf-8-unix -*-
-
-@book{Meta_CN,
-  title = {{电磁超介质及其应用}},
-  address = {北京},
-  publisher = {国防工业出版社},
-  year = {2008},
-  author = {崔万照 and 马伟 and 邱乐徳 and 张洪太},
-  language = {chinese}
+@inproceedings{schafer1999recommender,
+  title={Recommender systems in e-commerce},
+  author={Schafer, J Ben and Konstan, Joseph and Riedl, John},
+  booktitle={Proceedings of the 1st ACM conference on Electronic commerce},
+  pages={158--166},
+  year={1999},
+  organization={ACM}
 }
 
-@book{JohnD,
-  title = {{Photonic Crystals: Molding the Flow of Light}},
-  publisher = {Princeton University Press},
-  year = {2008},
-  author = {Joannopoulos, J. D. and Johnson, S. G. and Winn, J. N.}
+@article{konstan1997grouplens,
+  title={GroupLens: applying collaborative filtering to Usenet news},
+  author={Konstan, Joseph A and Miller, Bradley N and Maltz, David and Herlocker, Jonathan L and Gordon, Lee R and Riedl, John},
+  journal={Communications of the ACM},
+  volume={40},
+  number={3},
+  pages={77--87},
+  year={1997},
+  publisher={ACM}
 }
 
-@book{IEEE-1363,
-  author={{IEEE Std 1363-2000}},
-  title={{IEEE} Standard Specifications for Public-Key Cryptography},
-  address={New York},
-  publisher={IEEE},
-  year={2000}
+@article{portugal2015use,
+  title={The Use of Machine Learning Algorithms in Recommender Systems: A Systematic Review},
+  author={Portugal, Ivens and Alencar, Paulo and Cowan, Donald},
+  journal={arXiv preprint arXiv:1511.05263},
+  year={2015}
 }
 
-@article{chen2007act,
-  author = {Chen, H. and Chan, C. T.},
-  title = {{Acoustic cloaking in three dimensions using acoustic metamaterials}},
-  journal = {Applied Physics Letters},
-  year = {2007},
-  volume = {91},
-  pages = {183518},
-  publisher = {AIP}
+@phdthesis{coyle2004making,
+  title={Making Personalised Flight Recommendations using Implicit Feedback},
+  author={Coyle, Lorcan},
+  year={2004},
+  school={Trinity College}
 }
 
-@article{chen2007ewi,
-  author = {Chen, H. and Wu, B. I. and Zhang, B. and Kong, J. A.},
-  title = {{Electromagnetic Wave Interactions with a Metamaterial Cloak}},
-  journal = {Physical Review Letters},
-  year = {2007},
-  volume = {99},
-  pages = {63903},
-  number = {6},
-  publisher = {APS}
+@book{kolodner2014case,
+  title={Case-based reasoning},
+  author={Kolodner, Janet},
+  year={2014},
+  publisher={Morgan Kaufmann}
 }
 
-
-@inproceedings{kocher99,
-  author={C. Kocher and J. Jaffe and B. Jun},
-  title={Differential Power Analysis},
-  editor={M. Wiener},
-  booktitle={Advances in Cryptology ({CRYPTO}~'99)},
-  series={Lecture Notes in Computer Science},
-  volume={1666},
-  pages={388-397},
-  publisher={Springer-Verlag},
-  month={August},
-  year={1999}
+@article{aamodt1994case,
+  title={Case-based reasoning: Foundational issues, methodological variations, and system approaches},
+  author={Aamodt, Agnar and Plaza, Enric},
+  journal={AI communications},
+  volume={7},
+  number={1},
+  pages={39--59},
+  year={1994},
+  publisher={IOS press}
 }
 
-@incollection{Krasnogor2004e,
-  AUTHOR = {N. Krasnogor},
-  TITLE = {Towards robust memetic algorithms},
-  BOOKTITLE = {Recent Advances in Memetic Algorithms},
-  PUBLISHER = {Springer Berlin Heidelberg},
-  YEAR = {2004},
-  PAGES = {185-207},
-  EDITOR = {W.E. Hart and N. Krasnogor and J.E. Smith},
-  VOLUME = {166},
-  SERIES = {Studies in Fuzziness and Soft Computing},  
-  ADDRESS = {New York},  
+@article{barth2014design,
+  title={Design and implementation of a flight recommendation engine.},
+  author={Barth, Raul S{\'e}rgio},
+  year={2014}
 }
 
-@incollection{zjsw,
-  AUTHOR = {班固},
-  TITLE = {苏武传},
-  BOOKTITLE = {传记散文英华},
-  PUBLISHER = {湖北人民出版社},
-  YEAR = {1998},  
-  PAGES = {65-69},
-  EDITOR = {郑在瀛 and 汪超宏 and 周文复},
-  VOLUME = {2},
-  SERIES = {新古文观止丛书},  
-  ADDRESS = {武汉},
-  language = {chinese},
+@inproceedings{lin2001characterized,
+  title={A characterized rating recommend system},
+  author={Lin, Yao-Tsung and Tseng, Shian-Shyong},
+  booktitle={Pacific-Asia Conference on Knowledge Discovery and Data Mining},
+  pages={41--46},
+  year={2001},
+  organization={Springer}
 }
 
-
-@inbook{clzs,
-  AUTHOR = {阎真},
-  TITLE = {沧浪之水},
-  CHAPTER = {大人物还是讲人情的},
-  PAGES = {185-207},
-  PUBLISHER = {人民文学出版社},
-  YEAR = {2001},  
-  language = {chinese},
+@inproceedings{oard1998implicit,
+  title={Implicit feedback for recommender systems},
+  author={Oard, Douglas W and Kim, Jinmook and others},
+  booktitle={Proceedings of the AAAI workshop on recommender systems},
+  pages={81--83},
+  year={1998}
 }
 
-@book{tex,
- author    = {Donald E. Knuth},
- title     = {The {\TeX} Book},
- publisher = {Addison-Wesley Publishing Company},
- address   = {Reading, MA},
- year      = 1989,
- edition   = {15th},
+@inproceedings{breese1998empirical,
+  title={Empirical analysis of predictive algorithms for collaborative filtering},
+  author={Breese, John S and Heckerman, David and Kadie, Carl},
+  booktitle={Proceedings of the Fourteenth conference on Uncertainty in artificial intelligence},
+  pages={43--52},
+  year={1998},
+  organization={Morgan Kaufmann Publishers Inc.}
 }
 
-@book{companion,
- author    = {Michel Goosens and Frank Mittelbach and Alexander Samarin},
- title     = {The {\LaTeX} Companion},
- publisher = {Addison-Wesley Publishing Company},
- address   = {Reading, MA},
- PAGES = {112--125},
- year      = 1994,
+@inproceedings{claypool1999combining,
+  title={Combining content-based and collaborative filters in an online newspaper},
+  author={Claypool, Mark and Gokhale, Anuja and Miranda, Tim and Murnikov, Pavel and Netes, Dmitry and Sartin, Matthew},
+  booktitle={Proceedings of ACM SIGIR workshop on recommender systems},
+  volume={60},
+  year={1999},
+  organization={Citeseer}
 }
 
-@article{ELIDRISSI94,
-  AUTHOR =       {{Chafik El Idrissi}, M. and {Roney}, A. and {Frigon}, C. and
-                  {Larzilli{\`e}re}, M.},
-  TITLE =        {Measurements of total kinetic-energy released to the {$N=2$}
-                  dissociation limit of {H}$_2$ --- evidence of the dissociation
-                  of very high vibrational {R}ydberg states of {H}$_2$ by
-                  doubly-excited states},
-  JOURNAL =      {Chemical Physics Letters},
-  PAGES =        {260-266},
-  VOLUME =       224,
-  NUMBER =       10,
-  YEAR =         1994,
+@article{pazzani1999framework,
+  title={A framework for collaborative, content-based and demographic filtering},
+  author={Pazzani, Michael J},
+  journal={Artificial Intelligence Review},
+  volume={13},
+  number={5-6},
+  pages={393--408},
+  year={1999},
+  publisher={Springer}
 }
 
-@ARTICLE{MELLINGER96,
-  AUTHOR =       {Mellinger, A. and Vidal, C. R. and Jungen, Ch.},
-  TITLE =        {Laser reduced fluorescence study of the carbon-monoxide nd
-                  triplet {R}ydberg series-experimental results and multichannel
-                  quantum-defect analysis},
-  JOURNAL =      {J. Chem. Phys.},
-  PAGES =        {8913-8921},
-  VOLUME =       104,
-  NUMBER =       5,
-  YEAR =         1996,
+@inproceedings{soboroff1999combining,
+  title={Combining content and collaboration in text filtering},
+  author={Soboroff, Ian and Nicholas, Charles},
+  booktitle={Proceedings of the IJCAI},
+  volume={99},
+  pages={86--91},
+  year={1999},
+  organization={Citeseer}
 }
 
-@ARTICLE{SHELL02,
-  AUTHOR =       {Michael Shell},
-  TITLE =        {How to Use the {IEEEtran \LaTeX} Class},
-  JOURNAL =      {Journal of {\LaTeX} Class Files},
-  YEAR =         2002,
-  VOLUME =       12,
-  NUMBER =       4,
-  PAGES =        {100--120}
+@article{babu2011implementation,
+  title={An Implementation of the User-based Collaborative Filtering Algorithm},
+  author={Babu, Maddali Surendra Prasad and Kumar, Boddu Raja Sarath},
+  journal={IJCSIT) International Journal of Computer Science and Information Technologies},
+  volume={2},
+  number={3},
+  pages={1283--1286},
+  year={2011},
+  publisher={Citeseer}
 }
 
-@TechReport{NPB2,
-  title =        {The {NAS} Parallel Benchmarks 2.0},
-  author =       {Alex Woo and David Bailey and Maurice Yarrow and Wijngaart
-                  Wijngaart and Tim Harris and William Saphir},
-  year =         1995,
-  month =        dec # {~05},
-  institution =  {The Pennsylvania State University CiteSeer Archives},
-  url =          {http://www.nasa.org/}
+@inproceedings{sarwar2001item,
+  title={Item-based collaborative filtering recommendation algorithms},
+  author={Sarwar, Badrul and Karypis, George and Konstan, Joseph and Riedl, John},
+  booktitle={Proceedings of the 10th international conference on World Wide Web},
+  pages={285--295},
+  year={2001},
+  organization={ACM}
 }
 
-@INPROCEEDINGS{DPMG,
-  author =       {Kim, Sangbum and Woo, Namyoon and Yeom, Heon Y. and Park,
-                  Taesoon and Park, Hyoungwoo},
-  title =        {Design and {I}mplementation of {D}ynamic {P}rocess
-                  {M}anagement for {G}rid-enabled {MPICH}},
-  booktitle =    {the 10th European PVM/MPI Users' Group Conference},
-  year =         2003,
-  address =      {Venice, Italy},
-  month =        sep,
-}
-
-@INPROCEEDINGS{cnproceed,
-  author =       {王重阳 and 黄药师 and 欧阳峰 and 洪七公 and 段皇帝},
-  title =        {武林高手论文集},
-  booktitle =    {第~$N$~次华山论剑},
-  year =         2006,
-  address =      {西安, 中国},
-  publisher = {中国古籍出版社},
-  month =        sep,
-  language =     {chinese},
-}
-
-@ARTICLE{cnarticle,
-  AUTHOR =       {贾宝玉 and 林黛玉 and 薛宝钗 and 贾探春},
-  TITLE =        {论刘姥姥食量大如牛之现实意义},
-  JOURNAL =      {红楼梦杂谈},
-  PAGES =        {260--266},
-  VOLUME =       224,
-  YEAR =         1800,
-  LANGUAGE =         {chinese},
-}
-
-@thesis{yfz_perf,
-  author =       {杨芳洲},
-  title =        {机票个性化推荐方法},
-  school =       {上海交通大学},
-  year =         2016,
-  address =      {上海},
-  language =     {chinese},
-}
-
-@thesis{metamori2004,
-  author =       {Ashwin Raju Jeyakumar},
-  title =        {Metamori: A library for Incremental File Checkpointing},
-  school =       {Virgina Tech},
-  year =         2004,
-  month =        jun # {~21},
-  address =      {Blacksburg},
-}
-
-@thesis{FistSystem01,
-  AUTHOR =       {Erez Zadok},
-  TITLE =        {{FiST: A System for Stackable File System Code Generation}},
-  YEAR =         2001,
-  MONTH =        {May},
-  SCHOOL =       {Computer Science Department, Columbia University},
-  ADDRESS =      {USA}
-}
-
-@INBOOK{ColdSources,
-  AUTHOR =       {P. Gr{\"o}ning and L. Nilsson and P. Ruffieux and R.
-                  Clergereaux and O. Gr{\"o}ning},
-  TITLE =        {Encyclopedia of Nanoscience and Nanotechnology},
-  pages =        {547--579},
-  PUBLISHER =    {American Scientific Publishers},
-  YEAR =         2004,
-  volume =       1,
-}
-
-@phdthesis{bai2008,
-	title={{信用风险传染模型和信用衍生品的定价}},
-	author={白云芬},
-	year={2008},
-	language={chinese},
-	school={上海交通大学},
-	address={上海},
+@article{linden2003amazon,
+  title={Amazon. com recommendations: Item-to-item collaborative filtering},
+  author={Linden, Greg and Smith, Brent and York, Jeremy},
+  journal={IEEE Internet computing},
+  volume={7},
+  number={1},
+  pages={76--80},
+  year={2003},
+  publisher={IEEE}
 }
 
 
-%萧钰.出版业信息化迈人快车道[EB/OL]. (2001-12-19)[2002-04-15]. http://www.creader.com/news/20011219/200112190019. html.
-@article{xiaoyu2001,
-  author =       {萧钰},
-  title =        {出版业信息化迈人快车道},
-  year =         {2001},
-  TypeofLit =    {EB/OL},
-  modifydate =   {2001-12-19},
-  citedate =     {2002-04-15},
-  url =          {http://www.creader.com/news/20011219/200112190019.html},
-  language =     {chinese},
+
+@article{asabere2015socially,
+  title={Socially-Aware Recommender Systems},
+  author={Asabere, Nana Yaw and Torgby, Wisdom Kwawu and Adegboyega, Tonny Montana and Frempong, Dorothy Anima},
+  journal={International Journal of Computer Applications},
+  volume={115},
+  number={3},
+  year={2015},
+  publisher={Foundation of Computer Science}
 }
 
-% 在线析出文献
-@article{CHRISTINE1998,
-  author =       {Christine, Mlot},
-  title =        {Plant physiology: plant biology in the Genome Era},
-  journal =      {Science},
-  volume =       {281},
-  pages =        {331-332},
-  year =         {1998},
-  TypeofLit =    {J/OL},
-  citedate =     {1998-09-23},
-  url =           {http://www.sciencemag.org/cgi/collection/anatmorp},
+@inproceedings{massa2007trust,
+  title={Trust-aware recommender systems},
+  author={Massa, Paolo and Avesani, Paolo},
+  booktitle={Proceedings of the 2007 ACM conference on Recommender systems},
+  pages={17--24},
+  year={2007},
+  organization={ACM}
 }
 
-@book{RManual,
-        Address = {Vienna, Austria},
-        Author = {{R Core Team}},
-        Note = {{ISBN} 3-900051-07-0},
-        Organization = {{R Foundation for Statistical Computing}},
-        title = {R: A Language and Environment for Statistical Computing},
-        url = {http://www.R-project.org/},
-        Year = {2012},
+
+@incollection{goshtasby2012similarity,
+  title={Similarity and dissimilarity measures},
+  author={Goshtasby, A Ardeshir},
+  booktitle={Image registration},
+  pages={7--66},
+  year={2012},
+  publisher={Springer}
+}
+
+@inproceedings{schein2002methods,
+  title={Methods and metrics for cold-start recommendations},
+  author={Schein, Andrew I and Popescul, Alexandrin and Ungar, Lyle H and Pennock, David M},
+  booktitle={Proceedings of the 25th annual international ACM SIGIR conference on Research and development in information retrieval},
+  pages={253--260},
+  year={2002},
+  organization={ACM}
+}
+
+@article{sun2012survey,
+  title={Survey of cold-start problem in collaborative filtering recommender system},
+  author={SUN, Dong-ting and He, Tao and ZHANG, Fu-hai},
+  journal={Computer and Modernization},
+  volume={5},
+  pages={59--63},
+  year={2012}
+}
+
+@inproceedings{sahebi2011community,
+  title={Community-based recommendations: a solution to the cold start problem},
+  author={Sahebi, Shaghayegh and Cohen, William W},
+  booktitle={Workshop on recommender systems and the social web, RSWEB},
+  year={2011}
+}
+
+@article{goldberg2001eigentaste,
+  title={Eigentaste: A constant time collaborative filtering algorithm},
+  author={Goldberg, Ken and Roeder, Theresa and Gupta, Dhruv and Perkins, Chris},
+  journal={Information Retrieval},
+  volume={4},
+  number={2},
+  pages={133--151},
+  year={2001},
+  publisher={Springer}
+}
+
+@inproceedings{sedhain2014social,
+  title={Social collaborative filtering for cold-start recommendations},
+  author={Sedhain, Suvash and Sanner, Scott and Braziunas, Darius and Xie, Lexing and Christensen, Jordan},
+  booktitle={Proceedings of the 8th ACM Conference on Recommender systems},
+  pages={345--348},
+  year={2014},
+  organization={ACM}
+}
+
+@inproceedings{weston2013nonlinear,
+  title={Nonlinear latent factorization by embedding multiple user interests},
+  author={Weston, Jason and Weiss, Ron J and Yee, Hector},
+  booktitle={Proceedings of the 7th ACM conference on Recommender systems},
+  pages={65--68},
+  year={2013},
+  organization={ACM}
+}
+
+
+@inproceedings{kabutoya2010modeling,
+  title={Modeling multiple users’ purchase over a single account for collaborative filtering},
+  author={Kabutoya, Yutaka and Iwata, Tomoharu and Fujimura, Ko},
+  booktitle={International Conference on Web Information Systems Engineering},
+  pages={328--341},
+  year={2010},
+  organization={Springer}
+}
+
+@inproceedings{verstrepen2015top,
+  title={Top-N Recommendation for Shared Accounts},
+  author={Verstrepen, Koen and Goethals, Bart},
+  booktitle={Proceedings of the 9th ACM Conference on Recommender Systems},
+  pages={59--66},
+  year={2015},
+  organization={ACM}
+}
+
+@incollection{adomavicius2011context,
+  title={Context-aware recommender systems},
+  author={Adomavicius, Gediminas and Tuzhilin, Alexander},
+  booktitle={Recommender systems handbook},
+  pages={217--253},
+  year={2011},
+  publisher={Springer}
+}
+
+@incollection{lops2011content,
+  title={Content-based recommender systems: State of the art and trends},
+  author={Lops, Pasquale and De Gemmis, Marco and Semeraro, Giovanni},
+  booktitle={Recommender systems handbook},
+  pages={73--105},
+  year={2011},
+  publisher={Springer}
+}
+
+@article{goldberg1992using,
+  title={Using collaborative filtering to weave an information tapestry},
+  author={Goldberg, David and Nichols, David and Oki, Brian M and Terry, Douglas},
+  journal={Communications of the ACM},
+  volume={35},
+  number={12},
+  pages={61--70},
+  year={1992},
+  publisher={ACM}
+}
+
+@article{herlocker2004evaluating,
+  title={Evaluating collaborative filtering recommender systems},
+  author={Herlocker, Jonathan L and Konstan, Joseph A and Terveen, Loren G and Riedl, John T},
+  journal={ACM Transactions on Information Systems (TOIS)},
+  volume={22},
+  number={1},
+  pages={5--53},
+  year={2004},
+  publisher={ACM}
+}
+
+@inproceedings{holte1996inferring,
+  title={Inferring what a user is not interested in},
+  author={Holte, Robert C and Yan, John Ng Yuen},
+  booktitle={Conference of the Canadian Society for Computational Studies of Intelligence},
+  pages={159--171},
+  year={1996},
+  organization={Springer}
+}
+
+@incollection{billsus1999hybrid,
+  title={A hybrid user model for news story classification},
+  author={Billsus, Daniel and Pazzani, Michael J},
+  booktitle={UM99 User Modeling},
+  pages={99--108},
+  year={1999},
+  publisher={Springer}
+}
+
+@inproceedings{pazzani1996syskill,
+  title={Syskill \& Webert: Identifying interesting web sites},
+  author={Pazzani, Michael J and Muramatsu, Jack and Billsus, Daniel and others},
+  booktitle={AAAI/IAAI, Vol. 1},
+  pages={54--61},
+  year={1996}
+}
+
+@inproceedings{resnick1994grouplens,
+  title={GroupLens: an open architecture for collaborative filtering of netnews},
+  author={Resnick, Paul and Iacovou, Neophytos and Suchak, Mitesh and Bergstrom, Peter and Riedl, John},
+  booktitle={Proceedings of the 1994 ACM conference on Computer supported cooperative work},
+  pages={175--186},
+  year={1994},
+  organization={ACM}
+}
+
+@article{yang1999evaluation,
+  title={An evaluation of statistical approaches to text categorization},
+  author={Yang, Yiming},
+  journal={Information retrieval},
+  volume={1},
+  number={1-2},
+  pages={69--90},
+  year={1999},
+  publisher={Springer}
+}
+
+@article{zhong2005generative,
+  title={Generative model-based document clustering: a comparative study},
+  author={Zhong, Shi and Ghosh, Joydeep},
+  journal={Knowledge and Information Systems},
+  volume={8},
+  number={3},
+  pages={374--384},
+  year={2005},
+  publisher={Springer}
+}
+
+@inproceedings{hofmann1999probabilistic,
+  title={Probabilistic latent semantic indexing},
+  author={Hofmann, Thomas},
+  booktitle={Proceedings of the 22nd annual international ACM SIGIR conference on Research and development in information retrieval},
+  pages={50--57},
+  year={1999},
+  organization={ACM}
+}
+
+@article{blei2003latent,
+  title={Latent dirichlet allocation},
+  author={Blei, David M and Ng, Andrew Y and Jordan, Michael I},
+  journal={Journal of machine Learning research},
+  volume={3},
+  number={Jan},
+  pages={993--1022},
+  year={2003}
+}
+
+@inproceedings{minka2002expectation,
+  title={Expectation-propagation for the generative aspect model},
+  author={Minka, Thomas and Lafferty, John},
+  booktitle={Proceedings of the Eighteenth conference on Uncertainty in artificial intelligence},
+  pages={352--359},
+  year={2002},
+  organization={Morgan Kaufmann Publishers Inc.}
+}
+
+@article{zhang2010understanding,
+  title={Understanding bag-of-words model: a statistical framework},
+  author={Zhang, Yin and Jin, Rong and Zhou, Zhi-Hua},
+  journal={International Journal of Machine Learning and Cybernetics},
+  volume={1},
+  number={1-4},
+  pages={43--52},
+  year={2010},
+  publisher={Springer}
+}
+
+@article{deerwester1990indexing,
+  title={Indexing by latent semantic analysis},
+  author={Deerwester, Scott and Dumais, Susan T and Furnas, George W and Landauer, Thomas K and Harshman, Richard},
+  journal={Journal of the American society for information science},
+  volume={41},
+  number={6},
+  pages={391},
+  year={1990},
+  publisher={American Documentation Institute}
+}
+
+@article{golub1970singular,
+  title={Singular value decomposition and least squares solutions},
+  author={Golub, Gene H and Reinsch, Christian},
+  journal={Numerische mathematik},
+  volume={14},
+  number={5},
+  pages={403--420},
+  year={1970},
+  publisher={Springer}
+}
+
+@article{heinrich2008parameter,
+  title={Parameter estimation for text analysis},
+  author={Heinrich, Gregor},
+  journal={University of Leipzig, Tech. Rep},
+  year={2008}
+}
+
+@article{johansen1990maximum,
+  title={Maximum likelihood estimation and inference on cointegration—with applications to the demand for money},
+  author={Johansen, S{\o}ren and Juselius, Katarina},
+  journal={Oxford Bulletin of Economics and statistics},
+  volume={52},
+  number={2},
+  pages={169--210},
+  year={1990},
+  publisher={Wiley Online Library}
+}
+
+@article{gauvain1994maximum,
+  title={Maximum a posteriori estimation for multivariate Gaussian mixture observations of Markov chains},
+  author={Gauvain, J-L and Lee, Chin-Hui},
+  journal={IEEE transactions on speech and audio processing},
+  volume={2},
+  number={2},
+  pages={291--298},
+  year={1994},
+  publisher={IEEE}
+}
+
+@inproceedings{rosen2004author,
+  title={The author-topic model for authors and documents},
+  author={Rosen-Zvi, Michal and Griffiths, Thomas and Steyvers, Mark and Smyth, Padhraic},
+  booktitle={Proceedings of the 20th conference on Uncertainty in artificial intelligence},
+  pages={487--494},
+  year={2004},
+  organization={AUAI Press}
+}
+
+@inproceedings{steyvers2004probabilistic,
+  title={Probabilistic author-topic models for information discovery},
+  author={Steyvers, Mark and Smyth, Padhraic and Rosen-Zvi, Michal and Griffiths, Thomas},
+  booktitle={Proceedings of the tenth ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={306--315},
+  year={2004},
+  organization={ACM}
+}
+
+@article{rosen2010learning,
+  title={Learning author-topic models from text corpora},
+  author={Rosen-Zvi, Michal and Chemudugunta, Chaitanya and Griffiths, Thomas and Smyth, Padhraic and Steyvers, Mark},
+  journal={ACM Transactions on Information Systems (TOIS)},
+  volume={28},
+  number={1},
+  pages={4},
+  year={2010},
+  publisher={ACM}
+}
+
+@article{george1993variable,
+  title={Variable selection via Gibbs sampling},
+  author={George, Edward I and McCulloch, Robert E},
+  journal={Journal of the American Statistical Association},
+  volume={88},
+  number={423},
+  pages={881--889},
+  year={1993},
+  publisher={Taylor \& Francis Group}
+}
+
+@article{jingfan1997novel,
+  title={A Novel Variable Step Size LMS Adaptive Filtering Algorithm Based on Sigmoid Function [J]},
+  author={Jingfan, Qin and Jingzheng, Ouyang},
+  journal={Journal of Data Acquisition \& Processing},
+  volume={3},
+  pages={002},
+  year={1997}
 }
 
