--- a/tex/04_latent.tex
+++ b/tex/04_latent.tex
@@ -70,7 +70,7 @@ $F_i$ & 机票显性特征，增加起飞日期特征，维度 |F * 1| \\ \hline
 	 & = &\frac{1}{1+e^{-(V(u,i) - V(u,j))}}
 \end{eqnarray}
 
-式\ref{eq:pij}中，$P(i,j)$代表用户对物品$i$比物品$j$有更强偏好的概率。我们为用户在两张机票上的偏好比较概率建立一个Sigmoid函数。如果我们假设用户选择的机票在候选机票列表中具有最强的偏好。则可以将用户实际选择的机票和任意一条候选机票构成一组成对(pair-wise)关系，并根据式\ref{eq:pij}进行迭代学习。最终的学习效果是使得用户实际购买的机票有最大的效用值。该模型的目标函数如下：
+式\ref{eq:pij}中，$P(i,j)$代表用户对物品$i$比物品$j$有更强偏好的概率。我们为用户在两张机票上的偏好比较概率建立一个Sigmoid函数\parencite{jingfan1997novel}。如果我们假设用户选择的机票在候选机票列表中具有最强的偏好。则可以将用户实际选择的机票和任意一条候选机票构成一组成对(pair-wise)关系，并根据式\ref{eq:pij}进行迭代学习。最终的学习效果是使得用户实际购买的机票有最大的效用值。该模型的目标函数如下：
 
 \begin{equation}
 \label{eq:cost}
