--- a/tex/06_coldstart.tex
+++ b/tex/06_coldstart.tex
@@ -12,7 +12,7 @@
 在第三章中，图\ref{fig:user_user_percent}的统计结果表明，在北京-上海这条热门程度很高并且订单、用户数量比最高的航线上，平均每位用户的订单数量仅为两单，仍有$60\%$的用户在过去两年仅订过一单，$90\%$的用户仅订过不多于四单。订单数量在四单及以下的用户占了订单总数的$60\%$。在机票票务服务业务领域，用户冷启动现象也严重影响到用户体验及机票推荐效果。因此需要对冷启动问题展开深入研究。
 
 
-\section{航线分析及推荐差异}
+\section{航线差异分析及对推荐的影响}
 本小节我们主要对机票推荐中冷启动问题对推荐结果带来的负面影响进行分析与阐述。此处我们仍然选取第三章中提到的四条热门航线进行分析。
 
 \subsection{航线特征分布及用户行为分析}
