--- a/tex/pub.tex
+++ b/tex/pub.tex
@@ -5,6 +5,5 @@
 %%==================================================
 
 \begin{publications}{99}
-    \item\textsc{Chen H, Chan C~T}. {Acoustic cloaking in three dimensions using acoustic metamaterials}[J]. Applied Physics Letters, 2007, 91:183518.
-    \item\textsc{Chen H, Wu B~I, Zhang B}, et al. {Electromagnetic Wave Interactions with a Metamaterial Cloak}[J]. Physical Review Letters, 2007, 99(6):63903.
+    \item\textsc{Yafeng Zhao, Jian Cao, and Yudong Tan}. {Passenger Prediction in Shared Accounts for Flight Service Recommendation}. In Advances in Services Computing: 10th Asia-Pacific Services Computing Conference, APSCC 2016, Zhangjiajie, China, November 16-18, 2016, Proceedings (pp. 159-172)(第一作者)
 \end{publications}
