--- a/todo.txt
+++ b/todo.txt
@@ -105,3 +105,12 @@ Daily Build:
 词数    : 39102
 字符数  : 43609
 中文字数: 37907
+
+12.16
+词数    : 41254
+字符数  : 45801
+中文字数: 40045
+
+
+12.17
+remain：标题、附录、通读
