--- a/thesis.tex
+++ b/thesis.tex
@@ -80,7 +80,6 @@
 \include{tex/04_latent}
 \include{tex/07_summary}
 
-\iffalse
 \appendix	% 使用英文字母对附录编号，重新定义附录中的公式、图图表编号样式
 \renewcommand\theequation{\Alph{chapter}--\arabic{equation}}	
 \renewcommand\thefigure{\Alph{chapter}--\arabic{figure}}
@@ -88,11 +87,9 @@
 \renewcommand\thealgorithm{\Alph{chapter}--\arabic{algorithm}}
 
 %% 附录内容，本科学位论文可以用翻译的文献替代。
-\include{tex/app_setup}
-\include{tex/app_eq}
 \include{tex/app_cjk}
 \include{tex/app_log}
-\fi
+
 
 \backmatter	% 文后无编号部分 
 
@@ -123,7 +120,7 @@
     \include{tex/projectsreview}  
   \else
     \include{tex/pub}	      %% 发表论文
-    \include{tex/projects}  %% 参与的项目
+    %\include{tex/projects}  %% 参与的项目
   \fi
 \fi
 
